--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ body, html {
 
 /* Fond d'écran */
 body {
-    background: url('https://www.cyberpunk.net/build/images/bg-about-1440-c951e0d3.jpg') no-repeat center center fixed;
+    background: url('https://static.cdprojektred.com/cms.cdprojektred.com/16x9_big/872822c5e50dc71f345416098d29fc3ae5cd26c1-1920x1080.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
