--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ body, html {
 
 /* Fond d'écran */
 body {
-    background: url('https://www.cyberpunk.net/build/images/bg-about-1440-c951e0d3.jpg') no-repeat center center fixed;
+    background: url('Images/BG_Cyberpunk2077.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
