--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,6 +42,7 @@ main {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    height: calc(100vh - 80px);
 }
 
 .categories {
